🚨 Fix linter errors and warnings from IntelliJ code inspection, Error Prone, and NullAway
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>